fixed font size overlap

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
   padding: 1rem;
   border: none;
   color: white;
-  font-size: 1.2rem;
+  font-size: 1rem;
   outline: none;
 }
 
